--- a/src/App.css
+++ b/src/App.css
@@ -27,18 +27,18 @@ h3{
     width: 150%;
     height: auto;
 }
-.trend{
+/* .trend{
     border-radius: 10px;
     width: 150%;
     margin-top: 10px;
     height: 20rem;
-}
-.follow{
+} */
+/* .follow{
     border-radius: 10px;
     width: 150%;
     margin-top: 10px;
     height: 20rem;
-}
+} */
 .trend_follow{
     padding-left: 20px;
 }
